# viktor

./: .gitignore  Cargo.toml
ollama/: Cargo.toml  api.md
ollama/src/: client.rs  error.rs  lib.rs  types.rs
src/: consts.rs  main.rs  response.rs  system_prompt.rs  tool_handling.rs
src/agents/: mod.rs  researcher.rs
src/config/: guidelines.rs  init.rs  mod.rs
tools/: Cargo.toml
tools/src/: lib.rs
tools/src/crawler/: error.rs  mod.rs  tool.rs
