[package]
name = "ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
thiserror = "2.0.12"
bytes = "1.10.1"
futures = "0.3.31"
